frontend/common/app/assets/stylesheets/nav/_pop-up.scss
/* ==========================================================================
   Nav pop-up
   ========================================================================== */

.nav-popup {
    position: absolute;
    top: 0;
    clear: both;
    z-index: 100;
    @include rem((
        padding: ($gs-baseline/3)*2 0
    ));
    list-style: none;
    @include rem((
        margin-bottom: -4px,
        border-bottom: 2px solid $c-brandBlue
    ));
    background: #ffffff;
    width: 100%;
    .nav-popup__cta_container {
        text-align: center;
    }
    .nav-popup__cta {
        background-color: #005689;
        @include rem((
            padding: $gs-baseline $gs-baseline * 2,
            margin: $gs-gutter 0
        ));
        color: #ffffff;
        display: inline-block;
        width: 90%;
    }

    @include mq(mobile) {
        .nav-popup__cta_container {
            text-align: right;
        }
        .nav-popup__cta {
            float: left;
            width: auto;
            margin-left: $gs-gutter;
        }
    }
    @include mq(mobileLandscape) {
        .nav-popup__cta {
            @include rem((
                margin-left: $gs-gutter
            ));
        }
    }
}

/* Small
   ========================================================================== */

.nav-popup--small {
    @include rem((
        padding-top: $gs-baseline/3,
        padding-bottom: $gs-baseline,
        top: $mobilePopupOffset,
        min-height: 47px
    ));

    @include mq(tablet) {
        position: absolute;

        @include rem((
            top: 40px,
            right: $gs-gutter,
            padding-top: $gs-baseline/3,
            width: gs-span(4) + $gs-gutter * 2
        ));
        @include box-sizing(border-box);
        background-color: #ffffff;
        border: 1px solid $c-neutral4;

        .nav--additional-sections > .nav__item {
            > .nav__link {
                border-top: 0;
                border-bottom: 1px solid lighten($c-neutral4, 8%);
            }
        }

        .nav__link {
            @include rem((
                padding: 10px 0
            ));
        }
    }
}

.nav-popup--sections {
    padding-bottom: 0;
    display: block;
    @include mq(tablet) {
        display: none;
    }
}

/* Identity Menu
   ========================================================================== */

.nav-popup--profile {
    @include mq(tablet) {
        right: auto;
        @include rem((
            top: 44px,
            left: 20px,
            width: gs-span(3)
        ));
    }

    .nav {
        padding-left: 0;
        padding-right: 0;

        @include mq(tablet) {
            @include rem((
                padding-left: 2px,
                padding-right: 2px
            ));
        }

        > .nav__item {
            float: none;
            width: auto;
            display: block;
            @include rem((
                padding-left: $gs-gutter/2,
                padding-right: $gs-gutter/2
            ));
            @include mq(mobileLandscape) {
                @include rem((
                    padding-left: $gs-gutter,
                    padding-right: $gs-gutter
                ));
            }

            &:first-child .nav__link {
                border-top: 0;
                padding-top: 0;
                @include mq(tablet) {
                    @include rem((
                        padding-top: 10px
                    ));
                }
            }
            &:last-child .nav__link {
                border-bottom: 0;
            }
            .nav__link {
                @include mq(tablet) {
                    @include rem((
                        padding: 10px 0
                    ));
                }
            }
        }
    }
}

